--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MiniTVZ</title>
+
+    <meta name="description" content="Radionice robotike">
+    <meta name="keywords" content="MiniTVZ, Robotika, Radionice, Radionice robotike">
+    <meta name="author" content="SmartWeb">
 </head>
 <body>
     
