--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
     <meta name="description" content="Radionice robotike">
     <meta name="keywords" content="MiniTVZ, Robotika, Radionice, Radionice robotike">
     <meta name="author" content="SmartWeb">
+
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+
 </body>
 </html>
