--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </head>
 <body>
 
@@ -36,8 +37,16 @@
         </div>
     </header>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <footer class="bg-info text-dark p-3">
+        <div class="container d-flex justify-content-between align-items-center flex-wrap">
+            <p class="mb-0 fw-bold">MiniTVZ</p>
+            <div class="social-icons d-flex gap-3">
+                <a href="#" class="text-dark fs-4"><i class="fab fa-instagram"></i></a>
+                <a href="#" class="text-dark fs-4"><i class="fab fa-linkedin-in"></i></a>
+                <a href="#" class="text-dark fs-4"><i class="fab fa-facebook-f"></i></a>
+            </div>
+        </div>
+    </footer>
+
 </body>
-
-
 </html>
