--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="#">FQA</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Galerija</a>
+                    </li>
                 </ul>
             </div>
         </div>
