--- a/index.html
+++ b/index.html
@@ -1,55 +1,11 @@
 <!DOCTYPE html>
-<html lang="hr">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MiniTVZ_novosti</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <title>MiniTVY</title>
 </head>
 <body>
-
-    <header class="navbar navbar-expand-lg navbar-light bg-info p-3">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="pocetna.html">
-                </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="pocetna.html">O NAMA</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="radinica.html">Radionice</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Kontakti</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">FQA</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Galerija</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </header>
-
-    <footer class="bg-info text-dark p-3">
-        <div class="container d-flex justify-content-between align-items-center flex-wrap">
-            <p class="mb-0 fw-bold">MiniTVZ</p>
-            <div class="social-icons d-flex gap-3">
-                <a href="#" class="text-dark fs-4"><i class="fab fa-instagram"></i></a>
-                <a href="#" class="text-dark fs-4"><i class="fab fa-linkedin-in"></i></a>
-                <a href="#" class="text-dark fs-4"><i class="fab fa-facebook-f"></i></a>
-            </div>
-        </div>
-    </footer>
-
+    
 </body>
 </html>
