--- a/index.html
+++ b/index.html
@@ -3,9 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MiniTVY</title>
+    <title>MiniTVZ</title>
+
+    <meta name="Author" content="SmartWeb">
+    <meta name="description" content="MiniTVZ inicijativa">
+    <meta name="keywords" content="Radionice, Robotika, MiniTVZ, TVZ, Radionice robotike">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <header>
+    </header>
+
+    <article>
+    </article>
+
+    <footer>
+    </footer>
 </body>
 </html>
