--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
     <title>MiniTVZ</title>
 
     <meta name="Author" content="SmartWeb">
-    <meta name="description" content="MiniTVZ inicijativa">
-    <meta name="keywords" content="Radionice, Robotika, MiniTVZ, TVZ, Radionice robotike">
+    <meta name="Description" content="MiniTVZ inicijativa">
+    <meta name="Keywords" content="Robotika, Radionice, TVZ, MiniTVZ">
+
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
+    <header>        
     </header>
 
     <article>
