--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
 </head>
 <body>
     <header>
-        <a href="index.html" class="active">MiniTVZ</a>
+        <a href="index.html" class="active MiniTVZ">MiniTVZ</a>
         <a href="onama.html">O nama</a>
         <a href="radionice.html">Radionice</a>
-        <a href="kontakti.html">Kontakti</a>
-        <a href="faq.html">FAQ</a>
-        <a href="galerija.html">Galerija</a>        
+        <a href="partneri.html">Partneri</a>
+        <a href="galerija.html">Galerija</a>      
+        <a href="faq.html">FAQ</a>  
     </header>
 
     <article>
