Zavrsi izgled naslovnice

--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
     </header>
 
     <article>
+        <div class="naslovnica">
+            <img src="https://i.postimg.cc/fbzwjc71/ZAMkwPA.png" alt="logo" height="50px">
+            <h1>MiniTVZ</h1>
+        </div>
         <h1>Obavijesti</h1>
         <hr>
         <section class="obavijesti">
