--- a/radionice.html
+++ b/radionice.html
@@ -9,7 +9,7 @@
     <meta name="Description" content="MiniTVZ inicijativa">
     <meta name="Keywords" content="Robotika, Radionice, TVZ, MiniTVZ">
 
-    <link rel="stylesheet" href="style.css"> <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="stylesheet" href="radionice.css"> <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Exo+2:wght@400;700&family=Noto+Serif:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     
