--- a/radionice.html
+++ b/radionice.html
@@ -18,6 +18,7 @@
 </head>
 <body>
     <header>
+        <img src="https://i.postimg.cc/fbzwjc71/ZAMkwPA.png" alt="logo" height="40px">
         <a href="index.html" class="minitvz">MiniTVZ</a> <a href="onama.html">O nama</a>
         <a href="radionice.html" class="aktivan">Radionice</a>
         <a href="partneri.html">Partneri</a>
